# snakemake8_test

./: .gitignore  Snakefile  pyproject.toml
.snakemake/metadata/: LnNuYWtlbWFrZS9zdG9yYWdlL2djcy9vcmNlc3RyYWRhdGEvc25ha2VtYWtlOF90ZXN0L3Jlc3VsdHMvc3VtbWFyeS50eHQ=  cmVzdWx0cy9zdW1tYXJ5LnR4dA==
default/: config.yaml
results/: summary.txt
