[project]
name = "snakemake8_test"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Jermiah Joseph", email = "jermiahjoseph98@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []


[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64"]


[tool.pixi.tasks]
snake = "snakemake -c1"

[tool.pixi.dependencies]
snakemake = ">=8.10.8,<8.11"
snakemake-storage-plugin-gcs = ">=0.1.4,<0.2"
snakemake-storage-plugin-http = ">=0.2.3,<0.3"
snakemake-executor-plugin-kubernetes = ">=0.1.5,<0.2"
